Funcional proyeto final

--- a/ProyectoFinal/ProyectoFinal/MainPage.xaml
+++ b/ProyectoFinal/ProyectoFinal/MainPage.xaml
@@ -5,7 +5,8 @@
             x:Class="ProyectoFinal.MainPage">
 
     <local:Home/>
- 
+    <local:Home2/>
+    <local:Home3/>
     <local:CollectionsPage/>
     <local:Shopping/>
     <local:User/>
