--- a/ProyectoFinal/ProyectoFinal/Views/Home.xaml
+++ b/ProyectoFinal/ProyectoFinal/Views/Home.xaml
@@ -5,7 +5,6 @@
              Title="Home"
              IconImageSource ="explore.png">
 
-
     <Grid HorizontalOptions="FillAndExpand" VerticalOptions="StartAndExpand">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -18,6 +17,8 @@
             <ImageButton Source="cartFilled.png" Aspect="AspectFit" HeightRequest="32" WidthRequest="30" VerticalOptions="Center"/>
         </StackLayout>
         <ScrollView Grid.Row="2" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+
+         
             <Grid RowSpacing="30" HorizontalOptions="FillAndExpand" VerticalOptions="StartAndExpand">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
@@ -28,6 +29,61 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
+
+                    
+                    
+                    
+                    
+                    <CollectionView ItemsSource="{Binding Products}">
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate>
+                                <!-- Aquí defines cómo se verá cada elemento en el CollectionView -->
+                                <StackLayout>
+                                    <Image Source="{Binding Image}" HeightRequest="100" WidthRequest="100" />
+                                    <Label Text="{Binding Name}" />
+                                    <Label Text="{Binding Price}" />
+                                </StackLayout>
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                    </CollectionView>
+
+
+
+
+
+
+                    <Grid Grid.Row="1" Margin="0,0,30,0" BackgroundColor="darkred">
+                        <CollectionView Margin="25,25,25,25" ItemsSource="{Binding Products}">
+                            <CollectionView.ItemTemplate>
+                                <DataTemplate>
+                                    <Frame Padding="10,10,10,10" CornerRadius="12" IsClippedToBounds="False">
+                                       
+                                        <Grid HeightRequest="150">
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width=".3*" />
+                                                <ColumnDefinition Width=".7*" />
+                                            </Grid.ColumnDefinitions>
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height=".7*" />
+                                                <RowDefinition Height=".4*" />
+                                            </Grid.RowDefinitions>
+                                            <Image Grid.RowSpan="2" Source="{Binding Image}" />
+                                            <Label Grid.Column="1" FontAttributes="Bold" FontSize="15" Text="{Binding Name}" VerticalOptions="Center" />
+                                            <Label Grid.Row="1" Grid.Column="1" FontSize="14" TextColor="LightSeaGreen" Text="{Binding Price, StringFormat='{0:C}'}" />
+                                        </Grid>
+                                    </Frame>
+                                </DataTemplate>
+                            </CollectionView.ItemTemplate>
+                        </CollectionView>
+                    </Grid>
+
+
+
+
+
+
+
+
                     <Label Text="Collections" TextColor="Black" FontSize="20"/>
                     <Label Text="Show all" TextColor="Black" FontSize="14" VerticalOptions="Center" Opacity="0.5" HorizontalOptions="End" Margin="0,0,30,0"/>
                     <ScrollView Orientation="Horizontal" Grid.Row="1" VerticalOptions="Start" VerticalScrollBarVisibility="Never" HorizontalScrollBarVisibility="Never">
@@ -46,6 +102,48 @@
                         </StackLayout>
                     </ScrollView>
                 </Grid>
+
+
+
+
+                <Grid Grid.Row="1" BackgroundColor="WhiteSmoke">
+                    <CollectionView Margin="25" ItemsSource="{Binding Products}">
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate>
+                                <Frame
+      Padding="5"
+      CornerRadius="5"
+      IsClippedToBounds="False">
+                                    <Grid HeightRequest="150">
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width=".3*" />
+                                            <ColumnDefinition Width=".7*" />
+                                        </Grid.ColumnDefinitions>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height=".5*" />
+                                            <RowDefinition Height=".5*" />
+                                        </Grid.RowDefinitions>
+                                        <Image Grid.RowSpan="2" Source="{Binding Image}" />
+                                        <Label
+              Grid.Column="1"
+              FontAttributes="Bold"
+              FontSize="12"
+              Text="{Binding Name}"
+              VerticalOptions="Center" />
+                                        <Label
+              Grid.Row="1"
+              Grid.Column="1"
+              FontSize="Medium"
+              Text="{Binding Price, StringFormat='{0:C}'}" />
+                                    </Grid>
+                                </Frame>
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                    </CollectionView>
+                </Grid>
+
+
+
                 <Grid Grid.Row="1" RowSpacing="20" Margin="30,0,0,30" HorizontalOptions="FillAndExpand" VerticalOptions="Start">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
@@ -77,5 +175,17 @@
                 </Grid>
             </Grid>
         </ScrollView>
+        <Grid>
+            
+            
+            <!-- 1. Main image -->
+            <Image Grid.Row="0" 
+                   Grid.Column="0" 
+Source="banner2" 
+Aspect="AspectFill" />
+            
+        </Grid>
+        
     </Grid>
+
 </ContentPage>
